--- a/src/unit1.lfm
+++ b/src/unit1.lfm
@@ -173,7 +173,7 @@ object Form1: TForm1
       object AutoSaveLabel: TLabel
         Left = 78
         Height = 25
-        Top = 126
+        Top = 285
         Width = 81
         Caption = 'Auto Save'
         ParentColor = False
@@ -182,7 +182,7 @@ object Form1: TForm1
       object AutoSaveCheckBox: TCheckBox
         Left = 246
         Height = 24
-        Top = 126
+        Top = 285
         Width = 25
         ParentFont = False
         TabOrder = 1
@@ -190,7 +190,7 @@ object Form1: TForm1
       object WordWrapLabel: TLabel
         Left = 78
         Height = 25
-        Top = 201
+        Top = 323
         Width = 83
         Caption = 'Wordwrap'
         ParentColor = False
@@ -199,7 +199,7 @@ object Form1: TForm1
       object WordWrapCheckBox: TCheckBox
         Left = 246
         Height = 24
-        Top = 201
+        Top = 323
         Width = 25
         ParentFont = False
         TabOrder = 2
@@ -216,6 +216,25 @@ object Form1: TForm1
         TabOrder = 3
         Transparent = False
         OnClick = StaticText1Click
+      end
+      object FileListTextFontLabel: TLabel
+        Left = 78
+        Height = 25
+        Top = 96
+        Width = 98
+        Caption = 'File List Font'
+        ParentColor = False
+        ParentFont = False
+      end
+      object ChangeFont1: TButton
+        Left = 246
+        Height = 35
+        Top = 96
+        Width = 420
+        Caption = 'Change Font'
+        ParentFont = False
+        TabOrder = 4
+        OnClick = ChangeFont1Click
       end
     end
   end
@@ -381,12 +400,12 @@ object Form1: TForm1
     Font.Quality = fqDraft
     MinFontSize = 0
     MaxFontSize = 0
-    Left = 488
-    Top = 360
+    Left = 1464
+    Top = 824
   end
   object PopupMenu1: TPopupMenu
-    Left = 600
-    Top = 360
+    Left = 1344
+    Top = 824
     object CutText: TMenuItem
       Caption = 'Cut'
       OnClick = CutTextClick
@@ -426,8 +445,8 @@ object Form1: TForm1
     end
   end
   object MainMenu1: TMainMenu
-    Left = 376
-    Top = 360
+    Left = 1568
+    Top = 824
     object FileMenu: TMenuItem
       Caption = 'File'
       object Save: TMenuItem
@@ -458,7 +477,7 @@ object Form1: TForm1
   object SaveDialog1: TSaveDialog
     Title = 'Name of new file'
     DefaultExt = '.txt'
-    Left = 720
-    Top = 360
+    Left = 1216
+    Top = 824
   end
 end
